# gruniovita

./: CMakeLists.txt  Linux.cmake  Vita.cmake  gruniovita
gimp/: carrot_blue.xcf  carrot_gray.xcf  carrot_green.xcf  carrot_red.xcf  grunio_blue_1.xcf  grunio_blue_2.xcf  grunio_blue_3.xcf  grunio_gray_1.xcf  grunio_gray_2.xcf  grunio_gray_3.xcf  grunio_green_1.xcf  grunio_green_2.xcf  grunio_green_3.xcf  grunio_red_1.xcf  grunio_red_2.xcf  grunio_red_3.xcf
src/: game.c  game.h  main.c  screen.c  screen.h
